--- a/locales/tr.json
+++ b/locales/tr.json
@@ -9,26 +9,26 @@
   "hero": {
     "titleLine1": "Yeni interneti",
     "titleLine2": "inşa ediyoruz",
-    "subtitle": "YTU Blockchain kulübü ile <br />Yenilik yapın, öğrenin ve liderlik edin",
-    "description": "Hackathon'lar, workshop'lar ve blockchain inovasyonunu her gün destekleyen küresel bir topluluk",
+    "subtitle": "YTU Blockchain kulübü ile geleceği şekillendirin <br />İnovasyon yapın, öğrenin ve liderlik edin",
+    "description": "Hackathonlar, workshoplar ve her gün blockchain inovasyonuna yön veren küresel bir topluluk aracılığıyla blockchain teknolojisini uygulamalı olarak öğrenin",
     "joinUs": "Bize Katılın",
     "events": "Yaklaşan Etkinlikler"
   },
   "about": {
-    "heading": "Öğreniyoruz, sorguluyoruz<br />ve çözüyoruz.",
+    "heading": "Öğreniyoruz, sorguluyoruz ve çözüyoruz.",
     "stats": {
       "members": "Aktif Üyeler",
-      "membersDescription": "Gelişmekte olan geliştiriciler, tasarımcılar ve blockchain meraklılarından oluşan topluluk",
+      "membersDescription": "Geliştiriciler, tasarımcılar ve blockchain meraklılarından oluşan, her gün büyüyen bir topluluk",
       "countries": "Ülkeler",
-      "countriesDescription": "Farklı kıtalardan üyelere sahip küresel varlık",
+      "countriesDescription": "Farklı kıtalardan bağlantılarla küresel ekosistemde çalışmalar",
       "hackathons": "Hackathonlar",
       "hackathonsDescription": "Yenilikçi çözümlerin hayat bulduğu rekabetçi etkinlikler",
       "projects": "Gerçekleştirilen Projeler",
-      "projectsDescription": "Topluluk üyelerimiz tarafından başlatılan başarılı projeler"
+      "projectsDescription": "Topluluk üyelerimiz tarafından yaratılan başarılı projeler"
     },
-    "description": "YTU Blockchain topluluğu, Web3 meraklılarını ve yeni başlayanları güçlendirir",
-    "subtext": "Öğrenmeyi, işbirliğini ve yaratıcılığı teşvik ederek her seviyeden katılımcı için davetkar bir ortam sağlıyoruz.",
-    "mobileText": "Blockchain kulübümüz sadece sayılardan ibaret değil. Biz öğrenmeye, inşa etmeye ve birlikte yenilik yapmaya adanmış bir topluluğuz. İster yeni başlayın ister deneyimli bir geliştirici olun, burada sizin için bir yer var."
+    "description": "YTU Blockchain topluluğu, Web3 meraklılarını ve yeni başlayanları destekler",
+    "subtext": "Öğrenmeyi, işbirliğini ve yaratıcılığı teşvik ediyor, tüm düzeyler için sıcak bir ortam sağlıyoruz.",
+    "mobileText": "Blockchain kulübümüz sadece sayılardan ibaret değil. Biz öğrenmeye, inşa etmeye ve yenilik yapmaya adanmış bir topluluğuz. İster yeni başlayın ister deneyimli bir geliştirici olun, burada sizin için bir yer var."
   },
   "partners": {
     "title": "Partnerlerimiz",
@@ -36,27 +36,27 @@
   },
   "projects": {
     "heading": "Blockchain Yolculuğumuzu Keşfedin",
-    "description": "Yeniliğin, işbirliğinin ve teknolojinin internetin geleceğini yeniden tanımlamak için birleştiği bir dünyada yolculuğa çıkın.",
+    "description": "İnovasyon, işbirliği ve teknolojinin internetin geleceğini yeniden yazmak için bir araya geldiği dünyada bir yolculuğa çıkın",
     "viewProject": "Projeyi Görüntüle",
-    "mobileHint": "Etkinlikleri görüntülemek için vurgulanmış bir ülkeye dokunun"
+    "mobileHint": "Etkinlikleri görüntülemek için renklendirilmiş bir ülkeye dokunun"
   },
   "eventMap": {
-    "projectLink": "Projeye gitmek için tıklayın",
+    "projectLink": "Projeyi görüntülemek için tıkla",
     "events": "Etkinlikler",
     "clickToPin": "Sabitlemek için tıkla"
   },
   "mapProjects": {
     "descriptions": {
-      "nfticket": "Alanlarında deneyimli takımlar arasından birinci olduk ve kulüpten bir startup çıktı.",
-      "deauth": "DeAuth, şifreleri hatırlamayı kolaylaştıran bir araçtır.",
+      "nfticket": "Alanlarında deneyimli takımlar arasından birinci olduk ve topluluğumuzdan bir startup çıktı.",
+      "deauth": "DeAuth, şifreleri hatırlama konusunda hayatı kolaylaştıran bir araç.",
       "re_farm": "ReFi konseptini tarıma entegre eden bir proje geliştirdik.",
-      "tokenstalk": "Tokenstalk, NFT koleksiyonlarına dayalı sohbet odaları oluşturan ve Juno'da NFT indeksleme sorununu çözen sosyal bir uygulamadır.",
-      "greedysnap": "GreedySnap, ücret fiyatları hakkında bilgi veren bir Metamask Snap'idir; genel sıralamada 4. ve Snap kategorisinde 2. olmayı başardı.",
-      "nevo": "NEVO, Near üzerinde MaCi oylamasını mümkün kılar ve iki farklı kategoride 2 ödül kazandı.",
-      "cosmicproof": "CosmicProof, o1js kullanarak Cosmos üzerindeki tarihsel verileri kanıtlanabilir hale getiriyor. Finalist olarak üçüncü, MinaProtocol ve Node101 kategorilerinde birinci olduk.",
+      "tokenstalk": "Tokenstalk, NFT koleksiyonlarına dayalı sohbet odaları oluşturan ve Juno'daki NFT indeksleme sorununu çözen sosyal bir uygulamadır",
+      "greedysnap": "GreedySnap, işlem ücretleri hakkında bilgi veren bir Metamask Snap'idir ve genel sıralamada 4., Snap alanında ise 2. sırayı almıştır",
+      "nevo": "NEVO, Near'da MaCi oylamasını kullanılabilir kıldı ve 2 farklı kulvarda 2 ödül aldı.",
+      "cosmicproof": "CosmicProof, Cosmos'taki geçmiş verileri o1js kullanarak kanıtlanabilir hale getiriyor. Finalist olarak genel alanda üçüncülük, MinaProtocol ve Node101 dallarında ise birincilik aldık.",
       "marketmaker": "MarketMaker, PythNetwork'te zirveye yerleşti ve Worldcoin kategorisinde havuz ödülü kazandı.",
-      "orchave": "Orchave, kullanıcıların API'leri özelleştirmesine ve veri sağlayıcı olmalarına olanak tanıyan merkeziyetsiz, anlık bir veri oraklıdır. İki kategoride 2 ödül kazandık.",
-      "wisper": "Wisper, kullanıcılar arasında özel yerel bir blockchain oluşturarak, güvenilir bir sohbet uygulamasına ihtiyaç duymadan sohbet odaları oluşturmayı mümkün kılan eşler arası (p2p) bir sohbet uygulamasıdır.",
+      "orchave": "Orchave, kullanıcıların API'leri özelleştirmesine ve veri sağlayıcısı olmasına olanak tanıyan merkezi olmayan, anlık bir veri oracle'ıdır. 2 dalda 2 ödül kazandık",
+      "wisper": "Wisper, kullanıcılar arasında özel bir yerel blok zinciri oluşturarak güvenilir bir sohbet uygulamasına ihtiyaç duymadan sohbet odaları oluşturmayı sağlayan bir p2p sohbet uygulamasıdır.",
       "avalanche_summit": "Kulüp üyelerimiz, Barcelona'da düzenlenen Avalanche Summit'e katıldı.",
       "eth_warsaw": "Kulüp üyelerimiz, ETH Warsaw etkinliğine katıldı.",
       "eth_lisbon": "Kulüp üyelerimiz, ETH Lisbon etkinliğine katıldı.",
@@ -68,11 +68,11 @@
   },
   "projectsData": {
     "descriptions": {
-      "cosmicproof": "CosmicProof’ü geliştirdik; bu proje, Cosmos üzerindeki tarihsel verilerin o1js kullanılarak kanıtlanabilir olmasını sağlıyor. Belgrad’da düzenlenen LambdaClass Hackathon’da sunulan projemiz, finalist olarak üçüncü oldu ve MinaProtocol ile node101 kategorilerinde birinciyi kazandı.",
-      "orchave": "Kullanıcıların API’leri özelleştirmesine ve veri sağlayıcı olmalarına olanak tanıyan merkeziyetsiz, anlık bir veri oraklıdır. Filecoin ve Avail teknolojilerini entegre eden çözümümüzle ETHGlobal Brüksel’de en iyi başarıyı elde ettik.",
-      "nevo": "NEAR Protokolü üzerinde MaCi oylamasını mümkün kılan NEVO çözümümüz, Amsterdam’da düzenlenen ETHDam 2023 etkinliğinde iki ayrı kategoride ödüllerle tanındı.",
-      "marketmaker": "MarketMaker, PythNetwork kategorisinde zirveye yerleşen ve ETHGlobal Brüksel'de Worldcoin havuz ödülü kazanan bir market-making çözümüdür.",
-      "wisper": "Wisper, ETHGlobal Brüksel için geliştirilen, özel yerel blockchain'ler üzerinden güvene dayanmayan sohbet odaları oluşturmayı mümkün kılan bir eşler arası (P2P) sohbet uygulamasıdır."
+      "cosmicproof": "Cosmos'taki geçmiş verileri o1js kullanarak kanıtlanabilir hale getiren CosmicProof'u geliştirdik. Belgrad'daki LambdaClass Hackathon'da Finalist olarak üçüncü olduk ve MinaProtocol ve node101 alanlarında birincilik kazandık.",
+      "orchave": "Kullanıcıların API'leri özelleştirmesine ve veri sağlayıcısı olmasına olanak tanıyan merkezi olmayan, anlık veri oracle'ı. Filecoin ve Avail teknolojilerini entegre eden çözümümüzle ETHGlobal Brüksel'de en iyi ödülleri kazandık.",
+      "nevo": "Amsterdam'daki ETHDam 2023 için geliştirilen NEAR Protokolünde MaCi oylama entegrasyonu çözümü, iki ayrı dalda ödüle layık görüldü.",
+      "marketmaker": "PythNetwork dalında en üst sırada yer alan ve ETHGlobal Brüksel'de Worldcoin havuz ödülünü kazanan piyasa yapıcı çözüm",
+      "wisper": "ETHGlobal Brüksel için geliştirilen, özel yerel blok zincirleri aracılığıyla güvenilir sohbet odaları sağlayan bir P2P sohbet uygulaması.."
     },
     "locations": {
       "lambdaClass_hackathon": "LambdaClass Hackathon",
@@ -80,7 +80,7 @@
       "ethdam_2023": "ETHDam 2023"
     },
     "awards": {
-      "third_place_overall": "Genel Uçunculuk",
+      "third_place_overall": "Genel Üçunculuk",
       "mina_track": "Mina Kategorisi Birinciliği",
       "node101_track": "node101 Kategorisi Birinciliği",
       "first_place_pythnetwork": "PythNetwork Kategorisi Birinciliği",
@@ -97,24 +97,24 @@
     }
   },
   "viewAllCards": {
-    "viewAll": "Tüm Projeleri",
+    "viewAll": "Tüm projeleri görüntüle",
     "moreThanNProjects": "+ Projeler",
-    "HackathonWins": "5+ Hackathon Kazanımları",
+    "HackathonWins": "5+ Hackathon Başarıları",
     "All_projects": "Tüm Projeler"
   },
   "events": {
     "header": "Düzenlenen Etkinlikler",
-    "title": "etkinliklerimize katılın <br /> geleceğinizi şekillendirin",
+    "title": "etkinliklerimize katılın geleceğinizi şekillendirin",
     "eventsAndClass": "Etkinlikler ve Sınıflar",
     "button": "Tüm Programı Görüntüle"
   },
   "schedulePage": {
     "hero": {
       "title": "Etkinlik Takvimi",
-      "description": "Kapsamlı ders programımızı keşfedin ve sektör uzmanları tarafından yönetilen uygulamalı atölyelere katılın. Pratik deneyim ve gerçek dünya projeleriyle becerilerinizi geliştirin."
+      "description": "Kapsamlı kurs programımızı keşfedin ve sektör uzmanları tarafından yönetilen uygulamalı workshoplara katılın. Pratik denemeler ve gerçek hayat projeleri ile becerilerinizi inşa edin."
     },
     "stats": {
-      "hoursOfClasses": "Ders Saati",
+      "hoursOfClasses": "Eğitim Saati",
       "studentsAttended": "Katılan Öğrenci",
       "courses": "Kurs",
       "locations": "Lokasyon"
@@ -126,16 +126,16 @@
     },
     "location": {
       "title": "Konum Bilgisi",
-      "description": "Aksi belirtilmedikçe tüm dersler ana kampüsümüzde yapılmaktadır. EEF104 sınıfı, en iyi öğrenme deneyimini sağlamak için modern imkanlarla donatılmıştır.",
-      "mainCampus": "Ana Kampüs - EEF104",
-      "classDuration": "Dersler genellikle 2-3 saat sürer"
+      "description": "Aksi belirtilmedikçe tüm dersler ana kampüsümüzde yapılmaktadır.",
+      "mainCampus": "Ana Kampüs",
+      "classDuration": "Dersler genellikle 1-2 saat sürer"
     },
     "course": {
       "title": "Kurs Bilgisi",
-      "description": "Kurslarımız modern teknolojilerle uygulamalı deneyim sağlamak için tasarlanmıştır. Her oturum pratik alıştırmalar ve gerçek dünya örnekleri içerir.",
+      "description": "Kurslarımız modern teknolojilerle uygulamalı deneyim sağlamak üzere tasarlanmıştır. Her oturum pratik alıştırmalar ve gerçek dünyadan örnekler içerir.",
       "features": [
         "İnteraktif öğrenme ortamı",
-        "Proje tabanlı müfredat",
+        "Proje tabanlı öğrenim içeriği",
         "Sektör deneyimli eğitmenler",
         "Online kaynaklara erişim"
       ]
@@ -148,8 +148,8 @@
     "header": "yolculuğunuz burada başlıyor",
     "title": "Web3 Yol Haritamız",
     "description": "Blockchain ve Web3 dünyasında yolunuzu bulmanıza yardımcı olacak kapsamlı bir rehber",
-    "availableInFullGuide": "Tam rehberde mevcut",
-    "fullGuideButton": "Tam rehberi görüntüle"
+    "availableInFullGuide": "Rehber kapsamında mevcut",
+    "fullGuideButton": "Tüm rehberi görüntüle"
   },
   "footer": {
     "about": "Hakkında",
@@ -163,7 +163,7 @@
     "discord": "Discord",
     "events": "Etkinlikler",
     "forum": "Forum",
-    "description": "Blockchain teknolojisinin geleceğini yenilik, eğitim ve topluluk etkileşimiyle şekillendiriyoruz.",
+    "description": "Blockchain teknolojisinin geleceğini inovasyon, eğitim ve topluluk etkileşimimizle şekillendiriyoruz.",
     "registration": "2024-2025 Kayıt",
     "backToTop": "Başa Dön"
   },
@@ -174,12 +174,12 @@
     "activity": "Aktivite"
   },
   "common": {
-    "members": "Üye",
-    "countries": "Ülke",
-    "hackathons": "Hackathon",
-    "projects": "Proje",
+    "members": "Üyeler",
+    "countries": "Ülkeler",
+    "hackathons": "Hackathonlar",
+    "projects": "Projeler",
     "awards": "Ödüller",
-    "location": "Konum",
+    "location": "Lokasyon",
     "date": "Tarih"
   }
 }
